<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">一尾星蜂</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello world!</string>
    <string name="nickName">昵称</string>
    <string name="show">显示DatePicker</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="swim">swim</string>
    <string name="run">run</string>
    <string name="read">read</string>
    <string name="line1">线性布局管理器(配置)</string>
    <string name="line2">线性布局管理器(代码)</string>
    <string name="frame1">框架布局管理器(配置)</string>
    <string name="frame2">框架布局管理器(代码)</string>
    <string name="table1">表格布局管理器(配置)</string>
    <string name="table2">表格布局管理器(代码)</string>
    <string name="relative1">相对布局管理器(配置)</string>
    <string name="relative2">相对布局管理器(代码)</string>
    <string name="jpg1">测试图片</string>
    <string name="frame_myinput">请输入您的姓名&#8230;</string>
    <string name="frame_mybut">按我</string>
    <string name="city_prompt">选择你喜欢的城市：</string>
    <string name="gallery_2_text">详细信息</string>
    <string name="btnTest1">测试1</string>
    <string name="btnTest2">测试2</string>
    <string name="btnTest3">测试3</string>
    <string name="login">登录</string>
    <string name="back">返回</string>
    <string name="userNameTip">请输入用户名</string>
    <string name="passwordTip">请输入密码</string>
    <string name="picError">暂无图片</string>
    <string name="showPwd">显示密码</string>
</resources>