<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="218dp"
        android:layout_height="212dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/picError"
        android:src="@drawable/lion" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userNameTip"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordTip"
        android:inputType="textPassword" >
    </EditText>

    <CheckBox
        android:id="@+id/checkShowPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showPwd" />

    <LinearLayout
        style="@style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLogin"
            style="@style/AppBaseTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnBack"
            style="@style/AppBaseTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>